# object-detection-templates

./: .gitignore  .pre-commit-config.yaml
car-object-detection-torch/: .gitignore  Makefile  pyproject.toml
car-object-detection-torch/car_object_detection_torch/: dataset.py  logging_config.py  main.py  model.py  secrets.py  train.py
car-object-detection-torch/notebooks/: stable-car-object-detection-torch.ipynb
car-object-detection-torch/scripts/: download_data.py  download_data.sh
car-object-detection-torch/src/: main.py
